@@ -8,6 +8,7 @@ SELECT
     ARROWS_WEBCONTENTS.SITEID AS SITEID,
     ARROWS_WEBCONTENTS.ABSTRACT AS ABSTRACT,
     ARROWS_WEBCONTENTS.ICON AS ICON,
+    ARROWS_WEBCONTENTS.CONTENTTYPE AS CONTENTTYPE,
     ARROWS_WEBCONTENTS.SETRELATED AS SETRELATED
 FROM QVARROWS
 INNER JOIN ARROWS_WEBCONTENTS ON ARROWS_WEBCONTENTS.SYSID=QVARROWS.SYSID 
