@@ -3,6 +3,7 @@ SELECT
     QVROLES.SYSID AS SYSID, 
     QVROLES.EGOID AS EGOID, 
     QVROLES.ROLENAME AS DESCRIPTION,
+    QVROLES.REGISTRY AS REGISTRY,
     ' ' AS TAG
 FROM QVROLES
 WHERE ARCHIVED=0
