@@ -3,6 +3,7 @@ SELECT
     QVUSERS.SYSID AS SYSID, 
     QVUSERS.EGOID AS EGOID, 
     QVUSERS.USERNAME AS DESCRIPTION,
+    QVUSERS.REGISTRY AS REGISTRY,
     QVUSERS.ADMINISTRATOR AS ADMINISTRATOR,
     QVUSERS.EMAIL AS EMAIL,
     ' ' AS TAG
