@@ -14,10 +14,12 @@
             "SESSIONID":{"type":"VARCHAR", "size":100},
             "USERID":{"type":"VARCHAR", "size":30},
             "USERNAME":{"type":"VARCHAR", "size":100},
+            "USERREGISTRY":{"type":"TEXT"},
             "ADMINISTRATOR":{"type":"BOOLEAN"},
             "EMAIL":{"type":"VARCHAR", "size":100},
             "ROLEID":{"type":"VARCHAR", "size":30},
             "ROLENAME":{"type":"VARCHAR", "size":100},
+            "ROLEREGISTRY":{"type":"TEXT"},
             "ENVID":{"type":"VARCHAR", "size":30},
             "ENVNAME":{"type":"VARCHAR", "size":100},
             "LANGUAGENAME":{"type":"VARCHAR", "size":50},
